[gd_scene load_steps=13 format=2]

[ext_resource path="res://Texture/DefaultGrdt.tres" type="Texture" id=1]
[ext_resource path="res://Texture/InputTxtre.tres" type="StyleBox" id=2]
[ext_resource path="res://Greenscr.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Texture/ButtonNrm.tres" type="StyleBox" id=4]
[ext_resource path="res://Texture/BttnPres.tres" type="StyleBox" id=5]
[ext_resource path="res://Script/SrtIdentity.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
extra_spacing_char = -1
extra_spacing_space = -2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
outline_color = Color( 0.301961, 0.168627, 0.196078, 1 )
font_data = ExtResource( 3 )

[sub_resource type="InputEventAction" id=3]
action = "Login"
pressed = true

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="Animation" id=5]
resource_name = "Fade"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("FadeTexr:texture:fill_to")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 4.75, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 1 ), Vector2( 0.5, 1 ), Vector2( 0.5, 0.1 ), Vector2( 1, 0 ), Vector2( 1, 0.5 ), Vector2( 0.1, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeTexr:texture:fill_from")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 4.75683 ),
"update": 0,
"values": [ Vector2( 0.5, 0 ), Vector2( 0.5, 0 ), Vector2( 0.5, 0 ), Vector2( 0, 0 ), Vector2( 0, 0.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FadeTexr:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1024, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -130, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("FadeTexr:texture:fill_to")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeTexr:texture:fill_from")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FadeTexr:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1024, 0 ) ]
}

[node name="Identity" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Bckgrd" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 1 )

[node name="UiPos" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="HPos" type="HBoxContainer" parent="UiPos"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="LeftGp" type="MarginContainer" parent="UiPos/HPos"]
margin_right = 341.0
margin_bottom = 600.0
rect_min_size = Vector2( 341, 0 )

[node name="UiPos" type="MarginContainer" parent="UiPos/HPos"]
margin_left = 345.0
margin_right = 686.0
margin_bottom = 600.0

[node name="Ui" type="VBoxContainer" parent="UiPos/HPos/UiPos"]
margin_right = 341.0
margin_bottom = 600.0
rect_min_size = Vector2( 341, 0 )

[node name="TopGp" type="MarginContainer" parent="UiPos/HPos/UiPos/Ui"]
margin_right = 341.0
margin_bottom = 230.0
rect_min_size = Vector2( 0, 230 )

[node name="LnEdtName" type="LineEdit" parent="UiPos/HPos/UiPos/Ui"]
margin_top = 234.0
margin_right = 341.0
margin_bottom = 271.0
custom_colors/font_color = Color( 0.12549, 0.180392, 0.215686, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/read_only = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
align = 1
max_length = 16
placeholder_text = "Name"

[node name="MidGp" type="MarginContainer" parent="UiPos/HPos/UiPos/Ui"]
margin_top = 275.0
margin_right = 341.0
margin_bottom = 275.0

[node name="LnEdtPass" type="LineEdit" parent="UiPos/HPos/UiPos/Ui"]
margin_top = 279.0
margin_right = 341.0
margin_bottom = 316.0
custom_colors/font_color = Color( 0.12549, 0.180392, 0.215686, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/read_only = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
align = 1
max_length = 16
secret = true
placeholder_text = "Password"

[node name="BtmGap" type="MarginContainer" parent="UiPos/HPos/UiPos/Ui"]
margin_top = 320.0
margin_right = 341.0
margin_bottom = 320.0

[node name="LoginUi" type="HBoxContainer" parent="UiPos/HPos/UiPos/Ui"]
margin_top = 324.0
margin_right = 341.0
margin_bottom = 357.0

[node name="LeftGap" type="MarginContainer" parent="UiPos/HPos/UiPos/Ui/LoginUi"]
margin_right = 81.0
margin_bottom = 33.0
rect_min_size = Vector2( 81, 0 )

[node name="Button" type="Button" parent="UiPos/HPos/UiPos/Ui/LoginUi"]
margin_left = 85.0
margin_right = 255.0
margin_bottom = 33.0
rect_min_size = Vector2( 170, 32 )
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.752941, 0.580392, 0.45098, 1 )
custom_colors/font_color_focus = Color( 0.752941, 0.580392, 0.45098, 1 )
custom_colors/font_color = Color( 0.752941, 0.580392, 0.45098, 1 )
custom_colors/font_color_hover = Color( 0.752941, 0.580392, 0.45098, 1 )
custom_colors/font_color_pressed = Color( 0.752941, 0.580392, 0.45098, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
enabled_focus_mode = 0
shortcut = SubResource( 4 )
text = "Login"

[node name="FadeTexr" type="TextureRect" parent="."]
margin_left = 1024.0
margin_right = 2048.0
margin_bottom = 600.0
texture = ExtResource( 1 )

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
anims/Fade = SubResource( 5 )
anims/RESET = SubResource( 6 )

[connection signal="pressed" from="UiPos/HPos/UiPos/Ui/LoginUi/Button" to="." method="_on_Button_pressed"]
[connection signal="animation_finished" from="AnimPlayer" to="." method="_on_Anim_Done"]
